--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         xcode:
-          - latest
-          #- latest-stable
+          #- latest
+          - latest-stable
         platform:
           - 'macOS'
           - 'iOS Simulator'
@@ -32,7 +32,7 @@ jobs:
           - platform: 'watchOS Simulator'
             destination: 'OS=latest,name=Apple Watch Series 9 (45mm)'
     name: ${{ matrix.platform }} Tests
-    runs-on: macos-13
+    runs-on: macos-15
     steps:
       - name: Select latest available Xcode
         uses: maxim-lobanov/setup-xcode@v1
@@ -70,8 +70,7 @@ jobs:
       fail-fast: false
       matrix:
         swift-image:
-          - swift:5.9-jammy
-          - swiftlang/swift:nightly-5.10-jammy
+          - swift:6.0-noble
           - swiftlang/swift:nightly-main-jammy
     name: Linux ${{ matrix.swift-image }} Tests
     runs-on: ubuntu-latest
@@ -102,7 +101,7 @@ jobs:
     name: CodeQL Analysis
     runs-on: ubuntu-latest
     container:
-      image: swift:5.9-jammy
+      image: swift:6.0-noble
     permissions: { actions: write, contents: read, security-events: write }
     steps:
       - name: Checkout code
@@ -117,19 +116,3 @@ jobs:
         run: swift build
       - name: Run CodeQL analyze
         uses: github/codeql-action/analyze@v2
-
-  dependency-graph:
-    if: ${{ github.event_name == 'push' }}
-    runs-on: ubuntu-latest
-    container: swift:jammy
-    permissions:
-      contents: write
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-      - name: Set up dependencies
-        run: |
-          git config --global --add safe.directory "${GITHUB_WORKSPACE}"
-          apt-get update && apt-get install -y curl
-      - name: Submit dependency graph
-        uses: vapor-community/swift-dependency-submission@v0.1
