--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,11 @@ jobs:
           - platform: 'macOS'
             destination: 'arch=x86_64'
           - platform: 'iOS Simulator'
-            destination: 'OS=latest,name=iPhone 15 Pro'
+            destination: 'OS=latest,name=iPhone 16 Pro'
           - platform: 'tvOS Simulator'
             destination: 'OS=latest,name=Apple TV 4K (3rd generation)'
           - platform: 'watchOS Simulator'
-            destination: 'OS=latest,name=Apple Watch Series 9 (45mm)'
+            destination: 'OS=latest,name=Apple Watch Series 10 (42mm)'
     name: ${{ matrix.platform }} Tests
     runs-on: macos-15
     steps:
@@ -81,7 +81,7 @@ jobs:
       - name: Install xcbeautify
         run: |
           DEBIAN_FRONTEND=noninteractive apt-get update
-          DEBIAN_FRONTEND=noninteractive apt-get install -y curl
+          DEBIAN_FRONTEND=noninteractive apt-get install -y curl xz
           curl -fsSLO 'https://github.com/tuist/xcbeautify/releases/download/1.0.1/xcbeautify-1.0.1-x86_64-unknown-linux-gnu.tar.xz'
           tar -x -J -f xcbeautify-1.0.1-x86_64-unknown-linux-gnu.tar.xz
       - name: Run tests
