--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
                             -destination "${DESTINATION}" |
             xcbeautify --is-ci --quiet --renderer github-actions 
       - name: Upload coverage data
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           swift: true
@@ -82,8 +82,8 @@ jobs:
         run: |
           DEBIAN_FRONTEND=noninteractive apt-get update
           DEBIAN_FRONTEND=noninteractive apt-get install -y curl xz-utils
-          curl -fsSLO 'https://github.com/tuist/xcbeautify/releases/download/1.0.1/xcbeautify-1.0.1-x86_64-unknown-linux-gnu.tar.xz'
-          tar -x -J -f xcbeautify-1.0.1-x86_64-unknown-linux-gnu.tar.xz
+          curl -fsSLO 'https://github.com/cpisciotta/xcbeautify/releases/download/2.15.0/xcbeautify-2.15.0-x86_64-unknown-linux-gnu.tar.xz'
+          tar -x -J -f xcbeautify-2.15.0-x86_64-unknown-linux-gnu.tar.xz
       - name: Run tests
         shell: bash
         run: |
@@ -91,10 +91,10 @@ jobs:
             swift test --sanitize=thread --enable-code-coverage |
             ./xcbeautify --is-ci --quiet --renderer github-actions
       - name: Upload coverage data
-        uses: vapor/swift-codecov-action@v0.2
+        uses: vapor/swift-codecov-action@v0.3
         with:
-          cc_token: ${{ secrets.CODECOV_TOKEN }}
-          cc_verbose: true
+          codecov_token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
   codeql:
     if: ${{ !(github.event.pull_request.draft || false) }}
