--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,15 +81,16 @@ jobs:
       - name: Install xcbeautify
         run: |
           DEBIAN_FRONTEND=noninteractive apt-get update
-          DEBIAN_FRONTEND=noninteractive apt-get install -y curl xz-utils
-          curl -fsSLO 'https://github.com/cpisciotta/xcbeautify/releases/download/2.15.0/xcbeautify-2.15.0-x86_64-unknown-linux-gnu.tar.xz'
-          tar -x -J -f xcbeautify-2.15.0-x86_64-unknown-linux-gnu.tar.xz
+          DEBIAN_FRONTEND=noninteractive apt-get install -y curl xz-utils make
+          git clone https://github.com/cpisciotta/xcbeautify.git -b 2.15.0
+          cd xcbeautify
+          make install PREFIX=/usr
       - name: Run tests
         shell: bash
         run: |
           set -o pipefail && \
             swift test --sanitize=thread --enable-code-coverage |
-            ./xcbeautify --is-ci --quiet --renderer github-actions
+            xcbeautify --is-ci --quiet --renderer github-actions
       - name: Upload coverage data
         uses: vapor/swift-codecov-action@v0.3
         with:
